// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not allow to create a new webhook 1`] = `
<div
  className="page-actions"
>
  <Tooltip
    overlay="webhooks.maximum_reached.10"
  >
    <Button
      className="js-webhook-create disabled"
    >
      create
    </Button>
  </Tooltip>
</div>
`;

exports[`should render correctly 1`] = `
<div
  className="page-actions"
>
  <Button
    className="js-webhook-create"
    onClick={[Function]}
  >
    create
  </Button>
</div>
`;
